# FM_Algorithm

./: CMakeLists.txt  README.md  Абстракт.docx  Алгоритм Фидуччи.docx  Результаты.xlsx
src/: main.cc
src/include/: Algorithm.h  AlgorithmMod.h  Hypergraph.h  Partitions.h
src/lib/: CMakeLists.txt  Hypergraph.cc  Partitions.cc
src/lib/modified/: AlgorithmMod.cc  CMakeLists.txt  Gain_container.cc  Gain_container.h
src/lib/original/: Algorithm.cc  CMakeLists.txt  Gain_container.cc  Gain_container.h
